chore(dev): feature local for workspace; local text gen for quantized deepseek distill qwen and llama; add agent prompt format draft; add agent node struct draft

--- a/cerebro/lib/model/Cargo.toml
+++ b/cerebro/lib/model/Cargo.toml
@@ -44,3 +44,8 @@ rpassword = "7.2.0"
 actix-web-httpauth = "0.8.0"
 fancy-regex = "0.11.0"
 actix-web = "4"
+
+
+[features]
+default = []
+local = []
