--- a/cerebro/stack/pipeline/Cargo.toml
+++ b/cerebro/stack/pipeline/Cargo.toml
@@ -58,3 +58,7 @@ scrubby = { git = "https://github.com/esteinig/scrubby", branch = "main" }
 
 tar = "0.4.41"
 reqwest = { version = "0.12.7", features = ["blocking"] }
+
+[features]
+default = []
+local = []
