--- a/cerebro/stack/watcher/Cargo.toml
+++ b/cerebro/stack/watcher/Cargo.toml
@@ -58,3 +58,7 @@ anstyle = "1.0.6"
 uuid = { version = "1.2.1", features = ["v4", "fast-rng", "macro-diagnostics", "serde"] }
 actix-web-httpauth = "0.8.0"
 reqwest = { version = "0.12.2", features = ["blocking", "json"] }
+
+[features]
+default = []
+local = []
