--- a/templates/stack/docker/Dockerfile.gpt.dgx
+++ b/templates/stack/docker/Dockerfile.gpt.dgx
@@ -1,7 +1,7 @@
 
 FROM nvidia/cuda:12.2.2-cudnn8-devel-ubuntu20.04
 
-ARG CUDA_COMPUTE_CAP=86
+ARG CUDA_COMPUTE_CAP=80
 
 ENV CUDA_COMPUTE_CAP=${CUDA_COMPUTE_CAP}
 ENV DEBIAN_FRONTEND=noninteractive
@@ -24,14 +24,14 @@ RUN curl https://sh.rustup.rs -sSf | sh -s -- -y --default-toolchain stable && \
     rustup default stable && \
     rustup component add rustfmt clippy
 
-# WORKDIR /app
+WORKDIR /app
 
-# COPY Cargo.toml ./
-# COPY cerebro/ ./cerebro/
+COPY Cargo.toml ./
+COPY cerebro/ ./cerebro/
 
-# RUN cargo fetch
+RUN cargo fetch
 
-# RUN cargo build \
-#     --release \
-#     --manifest-path cerebro/stack/gp/Cargo.toml \
-#     --features local
+RUN cargo build \
+    --release \
+    --manifest-path cerebro/stack/gp/Cargo.toml \
+    --features local
