chore(dev): redesign gpt agents and plate testing for local deployment; temporarily remove commercial model api

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 # Testing
 testing/
 .nextflow/
+reports/
 templates/report/report.pdf
 cerebro/stack/report-wasm/tests/
 cerebro/stack/ciqa/templates/test*/
@@ -11,6 +12,8 @@ cerebro/stack/ciqa/templates/*.svg
 cerebro/stack/gp/templates/test*/
 cerebro/stack/gp/templates/adbdb5*.json
 cerebro/stack/gp/templates/bug_board.json
+cerebro/stack/ciqa/templates/plate_clinical.json
+
 
 # Triggered dev builds
 trigger
