--- a/cerebro/stack/ciqa/Cargo.toml
+++ b/cerebro/stack/ciqa/Cargo.toml
@@ -31,7 +31,7 @@ name = "cerebro_ciqa"
 cerebro-model = { path = "../../lib/model" }
 cerebro-client = { path = "../client" }
 cerebro-pipeline = { path = "../../stack/pipeline" }
-cerebro-gp = { path = "../../stack/gp" }
+cerebro-gp = { path = "../../stack/gp", features = ["local"] }
 
 anyhow = "1.0"
 thiserror = "1.0"
@@ -59,7 +59,6 @@ plotters = "0.3.7"
 plotters-bitmap = "0.3.7"
 tokio = "1.44.1"
 taxonomy = "0.10.0"
-rayon = "1.10.0"
 rand = "0.9.0"
 statrs = "0.18.0"
 regex = "1.11.1"
