--- a/cerebro/stack/gp/Cargo.toml
+++ b/cerebro/stack/gp/Cargo.toml
@@ -60,17 +60,13 @@ petgraph = "0.7.1"
 tokio = { version = "1.44.1", features = ["process", "rt-multi-thread"] }
 anthropic-api = "0.0.5"
 serde_plain = "1.0.2"
+plotters = "0.3.7"
 
 candle-core = { version = "0.9.0-alpha.4", features = ["cuda"], optional = true }
-candle-nn = { version = "0.9.0-alpha.4", features = ["cuda"], optional = true }
 candle-transformers = { version = "0.9.0-alpha.4", features = ["cuda"], optional = true }
 tokenizers = { version = "0.21.1", optional = true }
 hf-hub = { version = "0.4.2", optional = true }
-tracing-subscriber = { version = "0.3.19", optional = true }
-tracing-chrome = { version = "0.7.2", optional = true }
-candle-examples = { version = "0.9.0-alpha.4", optional = true }
-plotters = "0.3.7"
 
 [features]
 default = []
-local = ["candle-core", "candle-nn", "candle-transformers", "candle-examples", "tokenizers", "hf-hub", "tracing-subscriber", "tracing-chrome"]
+local = ["candle-core", "candle-transformers", "tokenizers", "hf-hub"]
