--- a/templates/stack/docker/Dockerfile.gpt.dgx
+++ b/templates/stack/docker/Dockerfile.gpt.dgx
@@ -46,7 +46,8 @@ RUN curl https://sh.rustup.rs -sSf \
 
 # fetch and build
 COPY --chown=$APP_USER:$APP_USER Cargo.toml ./
-COPY --chown=$APP_USER:$APP_USER cerebro/ ./cerebro/
+# run from repository base need to put the cerebro src folder inside cerebro for relative path resolution of stack embeddings
+COPY --chown=$APP_USER:$APP_USER cerebro/ ./cerebro/cerebro
 
 RUN cargo fetch
 RUN cargo build \
