--- a/cerebro/stack/gp/Cargo.toml
+++ b/cerebro/stack/gp/Cargo.toml
@@ -66,6 +66,7 @@ candle-core = { version = "0.9.0-alpha.4", features = ["cuda"], optional = true 
 candle-transformers = { version = "0.9.0-alpha.4", features = ["cuda"], optional = true }
 tokenizers = { version = "0.21.1", optional = true }
 hf-hub = { version = "0.4.2", optional = true }
+regex = "1.11.1"
 
 [features]
 default = []
