chore(dev): add tracing logs; change plot defaults

--- a/cerebro/stack/gp/Cargo.toml
+++ b/cerebro/stack/gp/Cargo.toml
@@ -67,6 +67,8 @@ hf-hub = { version = "0.4.2", optional = true }
 regex = "1.11.1"
 candle-core = { git = "https://github.com/huggingface/candle.git", branch = "main", features = ["cuda"], optional = true }
 candle-transformers = { git = "https://github.com/huggingface/candle.git", branch = "main", features = ["cuda"], optional = true }
+tracing-chrome = "0.7.2"
+tracing-subscriber = "0.3.19"
 
 [features]
 default = []
