chore(dev): add nvml gpu mem benchmark

--- a/cerebro/stack/gp/Cargo.toml
+++ b/cerebro/stack/gp/Cargo.toml
@@ -69,6 +69,7 @@ candle-core = { git = "https://github.com/huggingface/candle.git", branch = "mai
 candle-transformers = { git = "https://github.com/huggingface/candle.git", branch = "main", features = ["cuda"], optional = true }
 tracing-chrome = "0.7.2"
 tracing-subscriber = "0.3.19"
+nvml-wrapper = "0.10.0"
 
 [features]
 default = []
