chore(dev): fix docker nvml gpu mem benchmark

--- a/templates/stack/docker/Dockerfile.gpt.dgx
+++ b/templates/stack/docker/Dockerfile.gpt.dgx
@@ -85,12 +85,15 @@ RUN mkdir -p /mnt/host \
 COPY --from=builder /home/$APP_USER/app/target/release/meta-gp /usr/local/bin/meta-gp
 COPY --from=builder /home/$APP_USER/app/target/release/cerebro-ciqa /usr/local/bin/cerebro-ciqa
 
-# switch to non-root
-USER $APP_USER
 WORKDIR /home/$APP_USER
 
-# entrypoint logic: create symlink to libnvidia-ml.so if missing, then run app
+# Set the default user environment variables
+ENV HOME=/home/$APP_USER \
+    USER=$APP_USER
+
+# Entrypoint: create symlink as root, then exec as appuser
 ENTRYPOINT ["/bin/bash", "-c", "\
   if [ ! -e /usr/lib/x86_64-linux-gnu/libnvidia-ml.so ] && [ -e /usr/lib/x86_64-linux-gnu/libnvidia-ml.so.1 ]; then \
     ln -s /usr/lib/x86_64-linux-gnu/libnvidia-ml.so.1 /usr/lib/x86_64-linux-gnu/libnvidia-ml.so; \
-  fi && exec \"$@\"", "--"]
+  fi && \
+  exec /bin/bash -c 'cd $HOME && exec \"$@\"' -- $USER \"$@\"", "--"]
