--- a/templates/stack/docker/Dockerfile.gpt.dgx
+++ b/templates/stack/docker/Dockerfile.gpt.dgx
@@ -85,6 +85,7 @@ RUN mkdir -p /mnt/host \
 # copy in the meta-gp binary into PATH
 COPY --from=builder /home/$APP_USER/app/target/release/meta-gp /usr/local/bin/meta-gp
 COPY --from=builder /home/$APP_USER/app/target/release/cerebro-ciqa /usr/local/bin/cerebro-ciqa
+COPY --from=builder /home/$APP_USER/app/target/release/cerebro-client /usr/local/bin/cerebro-client
 
 WORKDIR /home/$APP_USER
 
