--- a/nextflow.config
+++ b/nextflow.config
@@ -29,15 +29,15 @@ params {
 
   cerebroProduction {
 
-    enabled                           = false
+    enabled                           = true
     
     authConfig  {
-      apiUrl                          = "http://api.cerebro.localhost"
-      tokenEnvironmentVariable        = "CEREBRO_API_TOKEN"
+      url                             = "http://api.cerebro.localhost"
+      tokenEnv                        = "CEREBRO_API_TOKEN"
     }
 
     fsConfig {
-      enabled                         = true
+      enabled                         = false
       team                            = "CNS"
     }
     
@@ -45,7 +45,7 @@ params {
       enabled                         = true
       team                            = "CNS"
       database                        = "CNS"
-      project                         = "Default"
+      project                         = "Test"
     }
 
   }
