--- a/nextflow.config
+++ b/nextflow.config
@@ -337,7 +337,7 @@ profiles {
     params.pathogenDetection.taxonomicProfile.classifier                      = true
     params.pathogenDetection.taxonomicProfile.classifierMethod                = "kraken2 metabuli ganon"
     params.pathogenDetection.taxonomicProfile.profiler                        = true
-    params.pathogenDetection.taxonomicProfile.profilerMethod                  = "bracken ganon sylph"
+    params.pathogenDetection.taxonomicProfile.profilerMethod                  = "bracken ganon"
 
     params.pathogenDetection.taxonomicProfile.alignment                       = true
     params.pathogenDetection.taxonomicProfile.alignmentMethod                 = "bowtie2"
