chore(dev): disable production config nfx

--- a/nextflow.config
+++ b/nextflow.config
@@ -29,7 +29,7 @@ params {
 
   cerebroProduction {
 
-    enabled                           = true
+    enabled                           = false
     
     authConfig  {
       url                             = "http://api.cerebro.localhost"
