chore(dev): add keepHost config nfx

--- a/nextflow.config
+++ b/nextflow.config
@@ -95,7 +95,7 @@ params {
       classifier                      = true
       classifierMethod                = "kraken2 metabuli ganon"
       profiler                        = true
-      profilerMethod                  = "bracken ganon sylph"
+      profilerMethod                  = "bracken ganon"
 
       metabuliIndex                   = "$params.databaseDirectory/cipher/metabuli"
       krakenIndex                     = "$params.databaseDirectory/cipher/kraken2"
@@ -280,56 +280,10 @@ profiles {
     params.qualityControl.adapterReverse      = "AGATCGGAAGAGCGTCGTGTAGGGAAAGAGTGT"
   }
 
-  ont {
-
-    params.nanopore                                                           = true
-                    
-    params.qualityControl.readQuality                                         = true
-    params.qualityControl.readDeduplication                                   = false
-                    
-    params.qualityControl.hostDepletion                                       = true
-    params.qualityControl.hostDepletionAligner                                = "minimap2"
-    params.qualityControl.hostDepletionIndex                                  = "$params.databaseDirectory/chm13v2.fa"
-                    
-    params.qualityControl.internalControls                                    = false
-    params.qualityControl.internalControlsAligner                             = "minimap2"
-    params.qualityControl.internalControlsIndex                               = "$params.databaseDirectory/controls.fasta"
-    params.qualityControl.internalControlsReference                           = "$params.databaseDirectory/controls.fasta"
-                        
-    params.qualityControl.backgroundDepletion                                 = false
-    params.qualityControl.backgroundDepletionAligner                          = "minimap2"
-    params.qualityControl.backgroundDepletionIndex                            = "$params.databaseDirectory/background.fasta"
-    params.qualityControl.backgroundDepletionReference                        = "$params.databaseDirectory/background.fasta"
-
-    params.pathogenDetection.taxonomicProfile.alignment                       = false
-    params.pathogenDetection.taxonomicProfile.alignmentMethod                 = "minimap2"
-    params.pathogenDetection.taxonomicProfile.alignmentIndex                  = "$params.databaseDirectory/gtdb/gtdb.fasta"
-    params.pathogenDetection.taxonomicProfile.alignmentReference              = "$params.databaseDirectory/gtdb/gtdb.fasta"
-    params.pathogenDetection.taxonomicProfile.alignmentSecondary              = false
-
-    params.pathogenDetection.taxonomicProfile.classifier                      = true
-    params.pathogenDetection.taxonomicProfile.classifierMethod                = "kraken2 metabuli ganon"
-    params.pathogenDetection.taxonomicProfile.profiler                        = true
-    params.pathogenDetection.taxonomicProfile.profilerMethod                  = "bracken ganon sylph"
-
+  keepHost {
+    params.qualityControl.hostDepletion       = false
   }
 
-  legacy {
-
-    params.pathogenDetection.taxonomicProfile.taxonomy                        = "$params.databaseDirectory/legacy/taxonomy"
-    params.pathogenDetection.taxonomicProfile.krakenIndex                     = "$params.databaseDirectory/legacy/kraken2"
-
-    params.pathogenDetection.taxonomicProfile.alignment                       = false
-
-    params.pathogenDetection.taxonomicProfile.classifier                      = true
-    params.pathogenDetection.taxonomicProfile.classifierMethod                = "kraken2"
-    params.pathogenDetection.taxonomicProfile.profiler                        = true
-    params.pathogenDetection.taxonomicProfile.profilerMethod                  = "bracken"
-
-    params.pathogenDetection.metagenomeAssembly.contigProfileIndex            = "$params.databaseDirectory/legacy/ncbi" 
-    params.pathogenDetection.metagenomeAssembly.contigProfileBlastPrefix      = "nt"
-
-  }
   cipher {
 
     params.pathogenDetection.taxonomicProfile.taxonomy                        = "$params.databaseDirectory/cipher/taxonomy"
