chore(dev): bump minor version; remove old nfx data; add order config for qc nxf

--- a/nextflow.config
+++ b/nextflow.config
@@ -5,7 +5,7 @@ manifest {
     homePage = 'https://github.com/esteinig/cerebro'
     description = 'Clinical metagenomic diagnostics pipeline'
     mainScript = 'main.nf'
-    version = '0.10.0'
+    version = '0.12.0'
     nextflowVersion = '>=24.04'
 }
 
@@ -63,7 +63,7 @@ params {
 
       readDeduplication               = true
       readDeduplicationHead           = 100
-      readDeduplicationDeterministic  = false
+      readDeduplicationDeterministic  = false // not implemented at the moment
         
       hostDepletion                   = true
       hostDepletionAligner            = "bowtie2"
@@ -73,6 +73,8 @@ params {
       backgroundDepletionAligner      = "minimap2"
       backgroundDepletionIndex        = "$params.databaseDirectory/background.fasta"
       backgroundDepletionReference    = "$params.databaseDirectory/background.fasta"
+
+      qualityDeduplication            = false  // do quality control before deduplication - not recommended for synthetic controls due to biomass estimates (ERCC/EDCC)
 
   }
 
@@ -282,6 +284,12 @@ profiles {
 
   keepHost {
     params.qualityControl.hostDepletion       = false
+  }
+
+  deduplicate {
+    params.qualityControl.hostDepletion        = false
+    params.qualityControl.qualityDeduplication = true
+
   }
 
   cipher {
