chore(dev): add comments; add clone to qc

--- a/nextflow.config
+++ b/nextflow.config
@@ -74,7 +74,7 @@ params {
       backgroundDepletionIndex        = "$params.databaseDirectory/background.fasta"
       backgroundDepletionReference    = "$params.databaseDirectory/background.fasta"
 
-      qualityDeduplication            = false  // do quality control before deduplication - not recommended for synthetic controls due to biomass estimates (ERCC/EDCC)
+      qualityDeduplication            = false  // read quality control before deduplication - not recommended for synthetic controls due to biomass estimates (ERCC/EDCC)
 
   }
 
@@ -97,7 +97,7 @@ params {
       classifier                      = true
       classifierMethod                = "kraken2 metabuli ganon"
       profiler                        = true
-      profilerMethod                  = "bracken ganon"
+      profilerMethod                  = "bracken"
 
       metabuliIndex                   = "$params.databaseDirectory/cipher/metabuli"
       krakenIndex                     = "$params.databaseDirectory/cipher/kraken2"
