chore(dev): add basic tui example; add limit to megahit assembly time in nextflow; add plot dev updates

--- a/nextflow.config
+++ b/nextflow.config
@@ -525,6 +525,7 @@ process {
       cpus = params.resources.threads.megahit
       memory = params.resources.memory.megahit 
       conda = params.resources.conda.megahit
+      time = "2h"
     }
     withLabel: pathogenAssemblyContigCoverage {  
       cpus = params.resources.threads.minimap2
