--- a/cerebro/stack/ciqa/Cargo.toml
+++ b/cerebro/stack/ciqa/Cargo.toml
@@ -27,13 +27,9 @@ name = "cerebro_ciqa"
 
 [dependencies]
 
-# Using the remote version to align with META-GPT crate external dependency for now - this means
-# that all development on which CIQA relies must be pushed to the repository first!
-
 cerebro-client = { git = "https://github.com/esteinig/cerebro", package = "cerebro-client", branch = "main" }
 cerebro-model = { git = "https://github.com/esteinig/cerebro", package = "cerebro-model", branch = "main" }
 cerebro-pipeline = { git = "https://github.com/esteinig/cerebro", package = "cerebro-pipeline", branch = "main" }
-
 meta-gpt = { git = "https://github.com/esteinig/meta-gpt", branch = "main", features = [], default-features = false }
 
 
@@ -65,6 +61,7 @@ rand = "0.9.0"
 statrs = "0.18.0"
 nvml-wrapper = "0.10.0"
 rayon = "1.10.0"
+ratatui = "0.29.0"
 
 [features]
 default = []
