chore(dev): add maxForks limit

--- a/nextflow.config
+++ b/nextflow.config
@@ -443,6 +443,7 @@ process {
     withLabel: cerebro { 
       cpus = params.resources.threads.cerebro 
       conda = params.resources.conda.cerebro // dev version
+      maxForks = 6 // for high mem run test
     }
     withLabel: panviralVirusRecovery { 
       cpus = params.resources.threads.vircov 
