chore(dev): add skip assembly option; add lod template

--- a/nextflow.config
+++ b/nextflow.config
@@ -27,6 +27,8 @@ params {
   nanopore                            = false
   monochrome                          = false
 
+  skipAssembly                        = false
+
   cerebroProduction {
 
     enabled                           = false
