chore(dev): add skip assembly by tag option

--- a/nextflow.config
+++ b/nextflow.config
@@ -27,7 +27,7 @@ params {
   nanopore                            = false
   monochrome                          = false
 
-  skipAssembly                        = false
+  skipAssembly                        = ["__POS__"]
 
   cerebroProduction {
 
