--- a/nextflow.config
+++ b/nextflow.config
@@ -27,7 +27,7 @@ params {
   nanopore                            = false
   monochrome                          = false
 
-  skipAssembly                        = ["__POS__"]
+  skipAssembly                        = ["__POS"]
 
   cerebroProduction {
 
