chore(dev): dev updates; pathogen table api cli; tax profile updates; cns path

--- a/nextflow.config
+++ b/nextflow.config
@@ -71,9 +71,9 @@ params {
       hostDepletionAligner            = "bowtie2"
       hostDepletionIndex              = "$params.databaseDirectory/chm13v2"
       
-      backgroundDepletion             = false
+      backgroundDepletion             = true
       backgroundDepletionAligner      = "minimap2"
-      backgroundDepletionIndex        = "$params.databaseDirectory/background.fasta"
+      backgroundDepletionIndex        = "$params.databaseDirectory/background.mmi"
       backgroundDepletionReference    = "$params.databaseDirectory/background.fasta"
 
       qualityDeduplication            = false  // read quality control before deduplication - not recommended for synthetic controls due to biomass estimates (ERCC/EDCC)
