chore(dev): add ref table tested; mod resource config nxf

--- a/nextflow.config
+++ b/nextflow.config
@@ -86,6 +86,7 @@ params {
     taxonomicProfile {
 
       enabled                         = true
+      taxonomy                        = "$params.databaseDirectory/cipher/taxonomy"
 
       alignment                       = false
       alignmentMethod                 = "bowtie2"
@@ -93,8 +94,6 @@ params {
       alignmentReference              = "$params.databaseDirectory/cipher/ictv.fasta"
       alignmentSecondary              = false
       vircovArgs                      = "--consensus-min-depth 3 --min-depth-coverage 1 --annotation-preset default"
-
-      taxonomy                        = "$params.databaseDirectory/cipher/taxonomy"
 
       classifier                      = true
       classifierMethod                = "kraken2 metabuli ganon"
@@ -219,6 +218,7 @@ params {
       blast                 = 8
     }
     memory {
+      cerebro               = "16 GB"
       metaspades            = "16 GB"
       megahit               = "16 GB"
       metabuli              = "16 GB"
@@ -412,6 +412,10 @@ profiles {
       executor.$local.memory = '1024 GB'
   }
   large {
+      executor.$local.cpus = 196
+      executor.$local.memory = '1536 GB'
+  }
+  xl {
       executor.$local.cpus = 256
       executor.$local.memory = '2048 GB'
   }
@@ -421,7 +425,7 @@ profiles {
     params.resources.threads.vircov                = 32
     params.resources.threads.vircovRemap           = 4
     params.resources.threads.vircovParallel        = 8
-    params.resources.threads.cerebro               = 2
+    params.resources.threads.cerebro               = 1
     params.resources.threads.kraken2               = 32
     params.resources.threads.bracken               = 1
     params.resources.threads.minimap2              = 16
@@ -444,8 +448,9 @@ process {
 
     withLabel: cerebro { 
       cpus = params.resources.threads.cerebro 
+      memory = params.resources.memory.cerebro
       conda = params.resources.conda.cerebro // dev version
-      maxForks = 6 // for high mem run test
+      
     }
     withLabel: panviralVirusRecovery { 
       cpus = params.resources.threads.vircov 
