chore(dev): api dev; faktory workers; training draft

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,5 +9,6 @@ members = [
     "cerebro/stack/pipeline",
     "cerebro/stack/report-wasm",
     "cerebro/stack/ciqa",
+    "cerebro/stack/worker"
 ]
 resolver = "2"
