--- a/cerebro/lib/model/Cargo.toml
+++ b/cerebro/lib/model/Cargo.toml
@@ -44,7 +44,9 @@ rpassword = "7.2.0"
 actix-web-httpauth = "0.8.0"
 fancy-regex = "0.11.0"
 actix-web = "4"
+mongodb = "3.2.1"
 
+bson = { version = "2.10", features = ["chrono-0_4"] }
 
 [features]
 default = []
