--- a/cerebro/stack/server/Cargo.toml
+++ b/cerebro/stack/server/Cargo.toml
@@ -60,6 +60,8 @@ governor = "0.5.1"
 toml = "0.7.6"
 clap = { version = "4.3.23", features = ["derive", "env", "unstable-styles", "wrap_help"] }
 anstyle = "1.0.1"
+tokio = { version = "1.47.1", features = ["rt-multi-thread", "macros", "time", "sync"] }
+faktory = "0.13.1"
 
 [features]
 default = []
