chore(dev): rework training interface; add cert compiler; add results eval

--- a/cerebro/lib/model/Cargo.toml
+++ b/cerebro/lib/model/Cargo.toml
@@ -47,6 +47,7 @@ actix-web = "4"
 mongodb = "3.2.1"
 
 bson = { version = "2.10", features = ["chrono-0_4"] }
+rand = "0.9.2"
 
 [features]
 default = []
