--- a/cerebro/stack/report-wasm/Cargo.toml
+++ b/cerebro/stack/report-wasm/Cargo.toml
@@ -17,7 +17,8 @@ include = [
 ]
 
 [lib]
-crate-type = ["cdylib"]
+name = "cerebro_report"
+crate-type = ["rlib", "cdylib"]
 
 [[bin]]
 name = "cerebro-report"
@@ -26,8 +27,6 @@ path = "src/main.rs"
 [dependencies]
 anyhow = "1"
 chrono = "0.4.39"
-getrandom = { version = "0.2.15", features = ["js"] }
-js-sys = "0.3.76"
 parking_lot = "0.12.3"
 serde = { version = "1.0.217", features = ["derive"] }
 serde_json = "1.0.134"
@@ -36,18 +35,20 @@ typst = "0.12.0"
 typst-assets = { version = "0.12.0", features = ["fonts"] }
 typst-pdf = "0.12.0"
 typst-svg = "0.12.0"
-wasm-bindgen = "0.2.99"
-serde-wasm-bindgen = "0.6.5"
 
-# Command-line interface feature
 clap = { version = "4", optional = true, features = ["derive", "env", "unstable-styles", "wrap_help"] }
 anstyle = { version = "1", optional = true }
 toml = { version = "0.8.20", optional = true }
 uuid = { version = "1.13.1", features = ["v4"], optional = true }
 
+[target.'cfg(target_arch = "wasm32")'.dependencies]
+js-sys = "0.3.76"
+wasm-bindgen = "0.2.99"
+serde-wasm-bindgen = "0.6.5"
+getrandom = { version = "0.2.15", features = ["js"] }
 
 [features]
-default = []
+default = ["lib", "cli"] 
 cli = ["clap", "anstyle", "toml", "uuid"]
-lib = ["uuid"]
+lib = ["toml", "uuid"]
 local = []
