chore(dev): fix server load trigger

--- a/cerebro/stack/server/Cargo.toml
+++ b/cerebro/stack/server/Cargo.toml
@@ -57,6 +57,8 @@ clap = { version = "4.3.23", features = ["derive", "env", "unstable-styles", "wr
 anstyle = "1.0.1"
 tokio = { version = "1.47.1", features = ["rt-multi-thread", "macros", "time", "sync"] }
 faktory = "0.13.1"
+sha2 = "0.10.9"
+hex = "0.4.3"
 
 [features]
 default = []
