chore(dev): add pathogen table; add detection summary prefetch; add ciqa handler drafts

--- a/cerebro/stack/ciqa/Cargo.toml
+++ b/cerebro/stack/ciqa/Cargo.toml
@@ -27,6 +27,7 @@ name = "cerebro_ciqa"
 
 [dependencies]
 
+cerebro-fs = { git = "https://github.com/esteinig/cerebro", package = "cerebro-fs", branch = "main" }
 cerebro-client = { git = "https://github.com/esteinig/cerebro", package = "cerebro-client", branch = "main" }
 cerebro-model = { git = "https://github.com/esteinig/cerebro", package = "cerebro-model", branch = "main" }
 cerebro-pipeline = { git = "https://github.com/esteinig/cerebro", package = "cerebro-pipeline", branch = "main" }
