--- a/app/package.json
+++ b/app/package.json
@@ -34,6 +34,7 @@
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-svelte": "^2.30.0",
     "highlight.js": "11.8.0",
+    "jszip": "^3.10.1",
     "postcss": "^8.4.38",
     "prettier": "^2.8.0",
     "prettier-plugin-svelte": "^2.10.1",
@@ -48,5 +49,6 @@
   },
   "type": "module",
   "dependencies": {
+    "jszip": "^3.10.1"
   }
 }
