chore(dev): add outlier prefetch disable

--- a/nextflow.config
+++ b/nextflow.config
@@ -27,7 +27,7 @@ params {
   nanopore                            = false
   monochrome                          = false
 
-  skipAssembly                        = ["__POS"]
+  skipAssembly                        = []
 
   cerebroProduction {
 
@@ -71,7 +71,7 @@ params {
       hostDepletionAligner            = "bowtie2"
       hostDepletionIndex              = "$params.databaseDirectory/chm13v2"
       
-      backgroundDepletion             = true
+      backgroundDepletion             = false
       backgroundDepletionAligner      = "minimap2"
       backgroundDepletionIndex        = "$params.databaseDirectory/background.mmi"
       backgroundDepletionReference    = "$params.databaseDirectory/background.fasta"
