chore(dev): best bitscore stream typing

--- a/nextflow.config
+++ b/nextflow.config
@@ -144,6 +144,7 @@ params {
       contigProfileBlastMinPercentIdentity   = 80.0       // relaxed homolog search
       contigProfileBlastMinEvalue            = "1e-06"    // relaxed homolog search
       contigProfileBlastMaxTargetSeqs        = 5
+      contigProfileBlastBitscoreStream       = false
       
       virusDetection                         = false
       virusDetectionMethod                   = "genomad"
