chore(dev): add updates: cli response handling; run id update; add remap kmer process draft; add bitscore stream blast profile

--- a/nextflow.config
+++ b/nextflow.config
@@ -286,7 +286,8 @@ profiles {
   }
 
   keepHost {
-    params.qualityControl.hostDepletion       = false
+    params.qualityControl.hostDepletion                                          = false
+    params.pathogenDetection.taxonomicProfile.contigProfileBlastBitscoreStream   = true
   }
 
   deduplicate {
@@ -302,7 +303,7 @@ profiles {
     params.pathogenDetection.taxonomicProfile.classifier                      = true
     params.pathogenDetection.taxonomicProfile.classifierMethod                = "kraken2 metabuli ganon"
     params.pathogenDetection.taxonomicProfile.profiler                        = true
-    params.pathogenDetection.taxonomicProfile.profilerMethod                  = "bracken ganon"
+    params.pathogenDetection.taxonomicProfile.profilerMethod                  = "bracken"
 
     params.pathogenDetection.taxonomicProfile.alignment                       = true
     params.pathogenDetection.taxonomicProfile.alignmentMethod                 = "bowtie2"
